--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,14 +1,123 @@
 @import '~bootstrap/scss/bootstrap.scss';
+@import 'colors';
+@import 'utils';
+@import 'views/login';
+@import 'views/code';
 
+body {
+  font-family: sans-serif;
+  font-weight: 400;
+  font-size: inherit;
+  background: #4d4d4d;
+  perspective: 600px;
+  .msg {
+    position: absolute;
+    display: inline-block;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    border-radius: 3px;
+    padding: 10px;
+    font-size: 11px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+  &.on {
+    overflow: hidden;
+  }
+}
 
-/* 
+#menu {
+  z-index: 100;
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  top: 50px;
+  right: 50px;
+  background: none;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  transform: rotate(-90deg);
+  &:hover {
+    background: #3c57dd;
+    transition: all 0.2s ease-in-out;
+  }
+  #line {
+    position: absolute;
+    width: 22px;
+    height: 2px;
+    left: 9px;
+    top: 19px;
+    background: $darkBlue;
+  }
+  #arrow {
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    top: 16px;
+    right: 9px;
+    border-top: 2px solid $darkBlue;
+    border-right: 2px solid $darkBlue;
+    transform: rotate(45deg);
+  }
+  &.on {
+    transition: all 0.2s ease-in-out;
+    transform: rotate(90deg);
+    &:hover {
+      background: #404040;
+      transition: all 0.2s ease-in-out;
+    }
+  }
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+section {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  padding: 0px;
+  background: #FFFFFF;
+  transition: all 0.3s ease-in-out;
+  .msg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background: #3c57dd;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+  &.on {
+    box-shadow: 0 5px 20px #333333;
+    border-radius: 6px;
+    cursor: zoom-out;
+    transition: all 0.3s ease-in-out;
+    transform-origin: 50% 0;
+    transform: scale(0.8) translateY(100vh);
+  }
+}
+#navbar {
+  z-index: 90;
+  position: fixed;
+  width: 90vw;
+  height: 70vh;
+  top: 0;
+  left: 50%;
+  opacity: 0;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+  transform-origin: 50% 0;
+  transform: translateX(-50%) scale(0);
+  .msg {
+    background: #404040;
+  }
+  &.on {
+    top: 5vh;
+    opacity: 1;
+    transition: all 0.3s ease-in-out;
+    transform: translateX(-50%) scale(1);
+  }
+}
