--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,10 @@
 
 
 $darkBlue: #004085;
+$darkYellow: #E6C452;
+$darkRed: #D34F56;
 
 //Forms
-$dark-grey: #ced4da;
+$really-dark-grey: #181818;
+$dark-grey: #5b5b5b;
+$light-grey: #eee;
