--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,10 +1,13 @@
 
-
+// Main colors for the entire application
 $darkBlue: #004085;
 $darkYellow: #E6C452;
 $darkRed: #D34F56;
 
-//Forms
+// Colors for the forms
 $really-dark-grey: #181818;
 $dark-grey: #5b5b5b;
 $light-grey: #eee;
+
+$green: #28a745;
+$orange: #d0a010;
