--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Jura|Khand');
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Khand');
 
 body{
-    font-family: 'Jura', sans-serif;
+    font-family: 'Khand', sans-serif;
+    font-size: 21px;
 }
 
 h1,h2,h3,h4{
-    font-family: 'Khand', sans-serif;
+    font-family: 'Abril Fatface', cursive;
 }
