--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,109 +3,9 @@
 @import 'colors';
 @import 'utils';
 @import 'fonts';
+@import 'components/index';
+@import 'layout';
 @import 'views/login';
 @import 'views/code';
-@import 'views/main_menu';
+@import 'views/todoview';
 
-body {
-  background: $really-dark-grey;
-  font-family: sans-serif;
-  font-weight: 400;
-  font-size: inherit;
-  perspective: 600px;
-  .msg {
-    position: absolute;
-    display: inline-block;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    border-radius: 3px;
-    padding: 10px;
-    font-size: 11px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-  }
-  &.on {
-    overflow: hidden;
-  }
-}
-
-#menu {
-  z-index: 100;
-  position: fixed;
-  width: 55px;
-  height: 55px;
-  top: 50px;
-  right: 50px;
-  background: none;
-  border: none;
-  border-radius: 5px;
-  outline: none;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-  img{ width: 100%; }
-  &:hover {
-    background: #3c57dd;
-    transition: all 0.2s ease-in-out;
-  }
-  &.on {
-    transition: all 0.2s ease-in-out;
-    transform: rotate(90deg);
-    &:hover {
-      background: #404040;
-      transition: all 0.2s ease-in-out;
-    }
-  }
-}
-
-section {
-  div:first-child.with-padding{
-    padding: 40px;
-  }
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  padding: 1px 0px 0px 0px;
-  background: #FFFFFF;
-  transition: all 0.3s ease-in-out;
-  .msg {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    background: #3c57dd;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
-  &.on {
-    box-shadow: 0 5px 20px #333333;
-    border-radius: 6px;
-    cursor: zoom-out;
-    transition: all 0.3s ease-in-out;
-    transform-origin: 50% 0;
-    transform: scale(0.8) translateY(100vh);
-  }
-}
-#navbar {
-  z-index: 90;
-  position: fixed;
-  width: 90vw;
-  height: 70vh;
-  top: 0;
-  left: 50%;
-  opacity: 0;
-  overflow: hidden;
-  transition: all 0.3s ease-in-out;
-  transform-origin: 50% 0;
-  transform: translateX(-50%) scale(0);
-  .msg {
-    background: #404040;
-  }
-  &.on {
-    top: 5vh;
-    opacity: 1;
-    transition: all 0.3s ease-in-out;
-    transform: translateX(-50%) scale(1);
-  }
-}
