--- a/src/styles/components/_spliter.scss
+++ b/src/styles/components/_spliter.scss
@@ -1,8 +1,11 @@
+/**
+The styles for the spliter component
+**/
 .Resizer {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    background: #000;
+    background: #D8D8D8;
     opacity: .2;
     z-index: 1;
     -moz-background-clip: padding;
@@ -11,8 +14,8 @@
 }
 
 .Resizer:hover {
-    -webkit-transition: all 2s ease;
-    transition: all 2s ease;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
 }
 
 .Resizer.horizontal {
