--- a/src/styles/components/_checkbox.scss
+++ b/src/styles/components/_checkbox.scss
@@ -6,19 +6,21 @@
     }
     label {
         cursor: pointer;
+        margin-bottom: 0px;
         &:before{
             cursor: pointer;
             display: inline-block;
             margin: 0 10px 0 0;
             width: 20px;
             height: 20px;
-            border: 3px solid #5b5b5b;
+            border: 1px solid #5b5b5b;
             vertical-align: middle;
             border-radius: 20%;
             color: #28a745;
-            font-size: 22px;
+            font-size: 30px;
+            padding: 0px 3px 5px 0px;
             text-align: center;
-            font-weight: 700;
+            font-weight: 100;
             line-height: 0.9em;
             transition: transform 0.2s 
         }  
