--- a/src/styles/components/_loading.scss
+++ b/src/styles/components/_loading.scss
@@ -6,7 +6,7 @@
     height: 100%;
     background: white;
     text-align: center;
-    padding-top: 35%;
+    padding-top: 100px;
     font-size: 50px;
     svg{
         animation-name: rotate; 
