--- a/src/styles/components/_timeline.scss
+++ b/src/styles/components/_timeline.scss
@@ -5,7 +5,7 @@
   padding-right: 10px;
   .line {
       &.left{
-        left: 5px;
+        left: 14px;
       }
       &.right{
         right: 5px;
@@ -30,9 +30,9 @@
     position: relative;
     width: calc(100% + 10px);
     height: calc(100vh - 70px);
-    padding: 1em 0;
-    padding-left: 5px;
+    margin-left: 15px;
     overflow-y: scroll;
+    overflow-x: hidden;
     list-style-type: none;
     li {
       padding: 1em 0;
