--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -4,3 +4,20 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+$lineColor: #f8f9fa;
+@mixin notebook-background{
+  background-image: -webkit-linear-gradient(left, $lineColor, $lineColor), -webkit-linear-gradient(top, white 0px, white 69px, rgba(255,255,255,0) 70px), -webkit-repeating-linear-gradient(white 0px, white 18px, $lineColor 19px, white 20px);
+  background-image: -moz-linear-gradient(left, $lineColor, $lineColor), -moz-linear-gradient(top, white 0px, white 69px, rgba(255,255,255,0) 70px), -moz-repeating-linear-gradient(white 0px, white 18px, $lineColor 19px, white 20px);
+  background-image: -ms-linear-gradient(left, $lineColor, $lineColor), -ms-linear-gradient(top, white 0px, white 69px, rgba(255,255,255,0) 70px), -ms-repeating-linear-gradient(white 0px, white 18px, $lineColor 19px, white 20px);
+  background-image: -o-linear-gradient(left, $lineColor, $lineColor), -o-linear-gradient(top, white 0px, white 69px, rgba(255,255,255,0) 70px), -o-repeating-linear-gradient(white 0px, white 18px, $lineColor 19px, white 20px);
+  background-image: linear-gradient(left, $lineColor, $lineColor), linear-gradient(top, white 0px, white 69px, rgba(255,255,255,0) 70px), repeating-linear-gradient(white 0px, white 18px, $lineColor 19px, white 20px);
+  background-size: 1px, 1px, auto, auto 20px;
+  background-repeat: repeat-y, repeat-y, no-repeat, repeat;
+  background-position: 90% 0px, 10% 0px, 0px 0px, 0px 0px;
+}
+
+@mixin deph1{
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
