--- a/src/styles/components/_panel.scss
+++ b/src/styles/components/_panel.scss
@@ -1,8 +1,9 @@
 .panel{
-    background: #fff;
+    @include notebook-background;
     border-radius: 2px;
     padding: 10px;
     margin-left: 5px;
+    font-size: 140%;
     height: 100vh;
     position: relative;
     .panel-toolbar{
@@ -11,8 +12,7 @@
         .bcbutton{ font-size: 20px; }
     }
     &.deph-1 {
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+        @include deph1;
     }
     &.deph-1:hover {
         box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
