--- a/src/styles/views/_searchview.scss
+++ b/src/styles/views/_searchview.scss
@@ -19,26 +19,36 @@
             background: white;
             @include deph1;
             .toolbar{
-                li{list-style: none; padding: 5px; }
+                li{list-style: none; padding: 5px; display: inline-block; }
                 display: inline-block;
                 position: absolute;
                 color:$dark-grey;
-                font-size: 20px;
-                &.up{ top: 0; right: 0; }
-                &.down{ bottom: 0; right: 0; }
+                &.up{  top: 5px; right: 7px; font-size: 17px; }
+                &.down{ bottom: 0; right: 7px; font-size: 20px; }
+            }
+        }
+        h4{
+            margin-bottom: 16px;
+            svg{ padding: 3px; color: $orange; 
+                &:before{
+                    content: attr(legend);
+                    display: inline-block;
+                }
             }
         }
         p.technolgies{
             font-size: 14px;
-            margin: -10px 0 0 0;
-            color: $light-grey;
+            margin: -25px 0;
+            color: black;
+            padding: 2px 5px 0 5px;
+            display: inline-block;
+            position: absolute;
+            background: $light-grey;
         }
         .result-description{
             font-size: 70%;
             margin-bottom: 5px;
         }
-        .toolbar{
-            display: none;
-        }
+        .toolbar{ display: none; }
     }
 }
