--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@
 @import 'layout';
 @import 'views/login';
 @import 'views/code';
-@import 'views/todoview';
 @import 'views/dayview';
 @import 'views/searchview';
+@import 'views/profileview';
 
