--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -3,6 +3,7 @@
 $darkBlue: #004085;
 $darkYellow: #E6C452;
 $darkRed: #D34F56;
+$darkGreen: #28a745;
 
 // Colors for the forms
 $really-dark-grey: #181818;
