--- a/src/styles/components/_checkbox.scss
+++ b/src/styles/components/_checkbox.scss
@@ -1,6 +1,9 @@
 .checkbox{
     padding: 5px;
     cursor: pointer;
+    span{
+        float: left;        
+    }
     &:hover{
         background: $light-grey;
     }
