--- a/src/styles/components/_panel.scss
+++ b/src/styles/components/_panel.scss
@@ -1,6 +1,7 @@
 .panel{
     @include notebook-background;
     border-radius: 2px;
+    overflow: auto;
     padding: 10px;
     margin-left: 5px;
     font-size: 140%;
