--- a/src/styles/components/_timeline.scss
+++ b/src/styles/components/_timeline.scss
@@ -36,6 +36,7 @@
     list-style-type: none;
     li {
       padding: 1em 0;
+      padding-right: 20px;
       background: white;
       &:after {
         content: "";
