--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -1,8 +1,17 @@
 .settings-item{
     position: absolute;
-    top: 10px;
+    padding-left: 10px;
+    bottom: 10px;
     right: 0;
     z-index: 10;
+    width: 100%;
+    .dropdown{
+        float: right;
+        margin-top: -3px;
+        .up{
+            transform: translateY(calc(-100% - 40px));
+        }
+    }
 }
 .main-menu{
     width: 100%;
