--- a/src/styles/views/_login.scss
+++ b/src/styles/views/_login.scss
@@ -6,3 +6,13 @@
         border-bottom: 1px solid $dark-grey;
     }
 }
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
