small fix on student timeline

--- a/src/styles/components/_timeline.scss
+++ b/src/styles/components/_timeline.scss
@@ -181,6 +181,7 @@
     display: inline-block;
     padding: 4px 6px;
     background: rgb(248, 248, 248);
+    max-width: 220px;
   }
   
   .desc {
