deliver assignment half done and better login UX

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -9,6 +9,7 @@
 @import 'sidebar';
 @import 'progress';
 @import 'todomenu';
+@import 'modal';
 @import 'droplink';
 @import 'breadcrumb';
 @import 'notifier';
