centralized login and logout, use of the bc-components, deliver assignment and better todo list

--- a/src/styles/components/_todomenu.scss
+++ b/src/styles/components/_todomenu.scss
@@ -26,6 +26,13 @@
                     color: #BDBDBD;
                     font-size: 14px;
                     padding: 5px;
+                    .dropdown-toggle{
+                        font-size: 13px;
+                    }
+                    .dropdown-menu{
+                        top: 35px;
+                        left: -120px;
+                    }
                 }
             }
             &.send-assignment{
