new version with improved timeline, next and previous buttons and search over the content

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -15,9 +15,11 @@
             }
             .menuicon{
                 padding: 3px;
+                margin-left: -7px;
                 margin-right: 5px;
+                width: 100%;
             }
-            &.mobile{
+            &.collapsed{
                 text-align: center;
                 span{ display:none;}
                 &:hover{
