open exercises on a new window

--- a/src/js/components/react-components/src/droplink/droplink.scss
+++ b/src/js/components/react-components/src/droplink/droplink.scss
@@ -8,5 +8,8 @@
         .dropdown-menu a{
             cursor: pointer;
         }
+        .dropdown-item i{
+            margin-right: 5px;
+        }
     }
 }
