--- a/src/styles/_bootstrap_overrides.scss
+++ b/src/styles/_bootstrap_overrides.scss
@@ -30,6 +30,9 @@ form{
         }
         li{
             list-style: none;
-        }   
+        }
+    }
+    .has-error{
+        border: 1px red solid;
     }
 }
