better task managment

--- a/src/js/components/react-components/src/checkbox/checkbox.scss
+++ b/src/js/components/react-components/src/checkbox/checkbox.scss
@@ -2,8 +2,8 @@
 .checkbox{
     padding: 5px;
     cursor: pointer;
-    span{
-        float: left;        
+    span.check{
+        float: left;
     }
     &:hover{
         background: $light-grey;
