migrated to the new api

--- a/src/styles/components/_searchmenu.scss
+++ b/src/styles/components/_searchmenu.scss
@@ -39,7 +39,7 @@
             &.assignment{color: $darkRed;}
             &.quiz{color: $darkGreen;}
             &.lesson{color: $darkBlue;}
-            &.replit{color: $dark-grey;}
+            &.exercise{color: $dark-grey;}
         }
     }
 }
