fixed issue with the timeline width, also removed messages for the student, lastly fixed problem with syllabus day labels when label dint contain "day" keyword

--- a/src/js/components/react-components/src/breadcrumb/breadcrumb.scss
+++ b/src/js/components/react-components/src/breadcrumb/breadcrumb.scss
@@ -1,4 +1,15 @@
 @import '../theme/colors';
+.bc-sidebar.collapsed{
+    h2{
+        width: 100%;
+    }
+    .breadcrumb li{
+        width: 100%;
+        display: inline-block;
+        text-align: center;
+        margin-right: 5px;
+    }
+}
 .breadcrumb{
     padding: 0;
     background: inherit;
