--- a/src/styles/components/_timeline.scss
+++ b/src/styles/components/_timeline.scss
@@ -5,7 +5,7 @@
   padding-right: 10px;
   .line {
       &.left{
-        left: 14px;
+        left: 3px;
       }
       &.right{
         right: 5px;
@@ -26,11 +26,29 @@
       z-index: 5;
     }
   ul {
-    &:-webkit-scrollbar {display:none;}
+    &::-webkit-scrollbar {
+      width: 5px;
+      display: none;
+    }
+    &:hover{
+      &::-webkit-scrollbar {
+        display: inherit;
+      }
+    }
+    /* Track */
+    &::-webkit-scrollbar-track {
+      border-radius: 10px;
+    }
+    
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+      background: red;
+      border-radius: 5px;
+    }
     position: relative;
-    width: calc(100% + 10px);
+    width: calc(100% + 6px);
     height: calc(100vh - 70px);
-    margin-left: 15px;
+    margin-left: 0px;
     overflow-y: scroll;
     overflow-x: hidden;
     list-style-type: none;
