remove wheel handler for timeline #28

--- a/src/styles/components/_timeline.scss
+++ b/src/styles/components/_timeline.scss
@@ -26,6 +26,7 @@
       z-index: 5;
     }
   ul {
+    scroll-behavior: smooth;
     &::-webkit-scrollbar {
       width: 5px;
       display: none;
